Integrated with Settlements Inference Service